# safe-sight

./: .gitignore  README.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: events.py  persons.py  stream.py
backend/app/core/: config.py  database.py
backend/app/ml/: __init__.py  detector_factory.py  face_recognition.py  hybrid_detector.py  mask_utils.py  person_detector.py  pipeline.py  sam3_detector.py  sam3_segmenter.py  temporal_filter.py  tracker.py  yolov11_detector.py
backend/app/models/: __init__.py  event.py  video_source.py
backend/app/services/: deduplication.py  event_service.py  persistence.py  person_service.py
backend/configs/: ppe_construction_yolo11.yaml  ppe_lab_yolo11.yaml  ppe_presence_yolo11.yaml
docs/: PROJECT_STATUS.md  video_validation_datasets.md
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.module.css  page.tsx
frontend/src/components/dashboard/: EventFeed.module.css  EventFeed.tsx  LiveVideo.module.css  LiveVideo.tsx  MediaPlayer.module.css  MediaPlayer.tsx  SummaryStats.module.css  SummaryStats.tsx  ViolationCharts.module.css  ViolationCharts.tsx
frontend/src/components/layout/: Navbar.module.css  Navbar.tsx  Sidebar.module.css  Sidebar.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/lib/: api.ts
scripts/: check_gpu.ps1  download_validation_videos.ps1  install_backend_gpu.ps1  install_frontend.ps1  prepare_ppe_presence_dataset.py  prepare_weights.ps1  run_backend.ps1  run_frontend.ps1  train_ppe_presence_yolo11.ps1  train_ppe_yolo11.ps1
